--- a/views/pages/admin/user.ejs
+++ b/views/pages/admin/user.ejs
@@ -12,8 +12,8 @@
                 <div class="content-wrapper">
                     <div class="card">
                         <div class="card-body">
-                            <table id="example" class="table table-hover">
-                                <thead class="bg-primary ">
+                            <table id="example" class="table table-hover table-striped">
+                                <thead>
                                     <tr class="text-center">
                                         <th class="font-weight-bolder">First name</th>
                                         <th class="font-weight-bolder">Last name</th>
@@ -24,7 +24,12 @@
                                         <th class="font-weight-bolder">Action</th>
                                     </tr>
                                 </thead>
-  
+                                <style>
+                                    .user-modal-dialog {
+                                        max-width: 450px;
+                                        margin: 30px auto;                        
+                                    }
+                                </style>
                                 <tbody>
                                 <% for(var obj of data) { %>
                                     <tr style="cursor: pointer">
@@ -50,12 +55,15 @@
                                             <div class="button-group">
                                                 <button type="button"
                                                     data-toggle="modal" 
-                                                    data-target="#model<%= obj.id %>" 
+                                                    data-target="#model<%= obj.id %>"
+                                                    onclick="modalUser(<%= obj.id %>)"
                                                     class="btn btn-outline-primary pl-2 p-1 m-0 btn-rounded">
                                                     <i class="mdi mdi-content-save-edit-outline"></i>
                                                 </button>
 
-                                                <button class="btn btn-outline-danger pl-2 p-1 m-0 btn-rounded">
+                                                <button type="button"
+                                                    onclick="deleteUser(<%= obj.id %>)" 
+                                                    class="btn btn-outline-danger pl-2 p-1 m-0 btn-rounded">
                                                     <i class="mdi mdi-delete-outline"></i>
                                                 </button>
                                             </div>
@@ -63,31 +71,77 @@
                                     </tr>
                                     
                                     <!-- Modal -->
-                                    <div class="modal fade" id="model<%= obj.id %>" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
-                                        <div class="modal-dialog" role="document">
+                                    <div class="modal  fade" id="model<%= obj.id %>" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+                                        <div class="modal-dialog user-modal-dialog" role="document">
                                             <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title">Modal title</h5>
-                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
-                                                </div>
                                                 <div class="modal-body">
-                                                    Body
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                    <button type="button" class="btn btn-primary">Save</button>
+                                                    <h2 class="font-weight-bold">
+                                                        <strong>
+                                                            Edit user
+                                                        </strong>
+                                                    </h2>
+                                                    <div class="form-group">
+                                                        <label for="">First name</label>
+                                                        <input type="text" 
+                                                            name="" id="first-name-<%= obj.id %>" 
+                                                            class="form-control" placeholder="" aria-describedby="helpId">
+                                                        <small id="helpId" class="text-muted" hidden>Help text</small>
+                                                    </div>
+
+                                                    <div class="form-group">
+                                                        <label for="">Last name: </label>
+                                                        <input type="text" 
+                                                            name="" id="last-name-<%= obj.id %>" 
+                                                            class="form-control" placeholder="" aria-describedby="helpId">
+                                                        <small id="helpId" class="text-muted" hidden>Help text</small>
+                                                    </div>
+
+                                                    <div class="form-group">
+                                                        <label for="">User name: </label>
+                                                        <input type="text" 
+                                                            name="" id="user-name-<%= obj.id %>" 
+                                                            class="form-control" placeholder="" aria-describedby="helpId">
+                                                        <small id="helpId" class="text-muted" hidden>Help text</small>
+                                                    </div>
+
+                                                    <div class="form-group">
+                                                        <label for="">Email: </label>
+                                                        <input type="text" 
+                                                            name="" id="email-<%= obj.id %>" 
+                                                            class="form-control" placeholder="" aria-describedby="helpId">
+                                                        <small id="helpId" class="text-muted" hidden>Help text</small>
+                                                    </div>
+                                                    
+                                                    <div class="form-group">
+                                                        <label for="">Role</label>
+                                                        <select class="custom-select custom-select-sm" name="" id="choose-role-<%= obj.id %>">
+                                                            <option selected>Select one</option>
+                                                            <option value="1"> Tier 1 </option>
+                                                            <option value="2"> Tier 2 </option>
+                                                            <option value="3"> Tier 3 </option>
+                                                            <option value="4"> Tier 4 </option>
+                                                            <option value="5"> Admin </option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="button-group text-right">
+                                                        <button class="btn btn-primary btn-default">
+                                                            <i class="fa fa-edit" aria-hidden="true">
+                                                                Edit User
+                                                            </i>
+                                                        </button>
+                                                        <button class="btn btn-danger btn-default" data-dismiss="modal">
+                                                            <i class="fa fa-times" aria-hidden="true"></i>
+                                                            Close
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-
-
                                 <% } %>
                                 </tbody>
 
-                                <!-- <tfoot>
+                                <tfoot>
                                     <tr class="text-center">
                                         <th class="font-weight-bolder">First name</th>
                                         <th class="font-weight-bolder">Last name</th>
@@ -97,7 +151,7 @@
                                         <th class="font-weight-bolder">Create At</th>
                                         <th class="font-weight-bolder">Action</th>
                                     </tr>
-                                </tfoot> -->
+                                </tfoot>
                             </table>
                         </div>
                     </div>
