--- a/views/partials/_sidebar.ejs
+++ b/views/partials/_sidebar.ejs
@@ -67,16 +67,16 @@
       <div class="collapse" id="auth">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="/admin-proxy"> Proxy manage </a>
+            <a class="nav-link" href="/admin-proxy"> Proxy manager </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin-user"> User manage </a>
+            <a class="nav-link" href="/admin-user"> User manager </a>
           </li>
-<%#
+
           <li class="nav-item">
-            <a class="nav-link" href="#"> Default page3 </a>
+            <a class="nav-link" href="/admin-bot"> Bot manager </a>
           </li>
-          <li class="nav-item">
+<%#       <li class="nav-item">
             <a class="nav-link" href="#"> Default page4 </a>
           </li>
           <li class="nav-item">
