--- a/views/pages/allbots.ejs
+++ b/views/pages/allbots.ejs
@@ -118,8 +118,7 @@
                                             data-target="#editModal<%= obj.bot[0].id %>">
 
                                             <h7 class="m-0 p-0">
-                                                <i class="fa fa-edit"></i>
-                                                Edit
+                                                <i class="mdi mdi-table-edit"></i>
                                             </h7>
                                         </button>
 
@@ -129,8 +128,7 @@
                                             id="change-status-<%= obj.bot[0].id %>"
                                             onclick="changStatus(<%= obj.bot[0].id %>)">
                                             <h7 id="pause<%= obj.bot[0].id %>" class="m-0 p-0">
-                                                <i class="fa fa-pause"></i>
-                                                Pause
+                                                <i class="mdi mdi-pause"></i>
                                             </h7>
                                         </button>
                                     <% } else { %>
@@ -139,8 +137,7 @@
                                             id="change-status-<%= obj.bot[0].id %>"
                                             onclick="changStatus(<%= obj.bot[0].id %>)">
                                             <h7 id="play<%= obj.bot[0].id %>" class="m-0 p-0">
-                                                <i class="fa fa-play"></i>
-                                                Play
+                                                <i class="mdi mdi-play"></i>
                                             </h7>
                                         </button>
                                     <% } %>
@@ -149,8 +146,7 @@
                                             data-toggle="modal" 
                                             data-target="#challengeModal<%= obj.bot[0].id %>">
                                             <h7 class="m-0 p-0">
-                                                <i class="fa fa-cogs"></i>
-                                                Challenge
+                                                <i class="mdi mdi-cogs"></i>
                                             </h7>
                                         </button>
                                     </div>
